# instagram_photography_pipeline

./: .gitignore  Makefile  pyproject.toml  requirements.txt
schema/final/: instagram_db.dbml  instagram_db.sql
schema/prod/: instagram_db.dbml  instagram_db.sql
scripts/: create_gcp_cloud_run_block.py  create_gcs_block.py  create_gcs_bucket.py  create_github_block.py  create_google_cloud_run_block.py  create_local_file_system_block.py  create_secret_block.py  create_sql_alchemy_block.py  google_cloud_run_deploy.py  insert_types.sql  local_deploy.py
src/flows/: get_user_data.py  get_user_media.py
src/google_cloud/: client.py
src/instagram/: challenge_resolver.py  client.py
src/utils/: config.py  serializer.py  transform.py
