[tool.poetry]
name = "instagram_photography_pipeline"
version = "0.1.0"
description = ""
authors = ["Marc-Philipp Esser <m-esser@mail.de>"]
readme = "README.md"
packages = [
   {include = "src/instagram"},
   {include = "src/utils"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
prefect = "^2.10.10"
prefect-gcp = "^0.4.1"
gcsfs = "^2023.5.0"
python-dotenv = "^1.0.0"
instagrapi = "^1.17.10"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
pandera = [
   {version = ">=0.15.1,<0.16.0", python = ">=3.9,<3.12"}
]
prefect-sqlalchemy = "^0.2.4"
pymysql = "^1.0.3"
pillow = "^9.5.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pre-commit = "*"
isort = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
